simplexml-2.6.6 [2012-07-30]